--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "一个用来查找商品过往优惠价格的小程序",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "cheerio": "^0.20.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +15,7 @@
     "url": "git+https://github.com/rossroma/robot.git"
   },
   "keywords": [],
-  "author": "rossroma",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rossroma/robot/issues"
